# m2aBot

./: CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/agents/: feature-developer.agent.md
m2abot/: __init__.py  cli.py  config.py
m2abot/agents/: adversarial_agent.py  orchestrator.py  testing_agent.py
m2abot/core/: codebase_reader.py  prompts.py
mock_project/: app.py
mock_project/backend/: booking_service.py  db.py
mock_project/data/: bookings.json  locations.json
vimeo_example/: CLAUDE.md  README.md  conftest.py
vimeo_example/api/: booking_client.py  user_client.py
vimeo_example/pages/: login_page.py  rooms_page.py
vimeo_example/tests/api/: test_bookings.py
vimeo_example/tests/data/: factories.py
vimeo_example/tests/ui/: conftest.py  test_rooms.py
