[project]
name = "m2abot"
version = "0.1.0"
description = "AI-powered test generation harness using adversarial Claude agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.52.0",
    "click>=8.1",
]

[project.scripts]
m2abot = "m2abot.cli:main"

[tool.pytest.ini_options]
testpaths = ["vimeo_example/tests"]
addopts = "-v"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["m2abot"]
